syntax = "proto3";
package messaging;

option go_package = "github.com/omnisci3nce/zena/proto";

message Message {
  string msg_id = 1;
  string channel_id = 2;
  string author = 3; // UUID
  string content = 4;
  int64 created_at = 5; // Linux epoch
}

// Used when the user sends a message and we must store it server-side
message NewMessage {
  string channel_id = 1; // UUID
  string content = 2;
  int64 timestamp = 3;
}

service Messenging {
  rpc SendNewMessage (NewMessage) returns (Message);
  rpc SubscribeChannels (ChannelList) returns (stream Message);
}

message ChannelList {
  repeated string channel_id = 1;
}

message LoginDetails {
  // TODO
}

message LoginResponse {
  // TODO
}

service Auth {
  rpc Login (LoginDetails) returns (LoginResponse);
}